# mirrorme

./: .gitignore  NOTICE.md  README.md  pyproject.toml
mirrorme/: frames.py  generate_ssl.py  globals.py  gui.py  gui_actions.py  gui_frames.py  main.py  server.py  utils.py  web_server.py  webrtc.py
mirrorme/templates/: index.j2
mirrorme/templates/static/: index.js
